hphp/test/zend/good/tests/classes/constants_error_007.php.expectf

Fatal error: Only variables, members, and the results of function calls can be used as references %s/constants_error_007.php on line 10
